<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_rbFemale" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rbMale" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onPlaceClick"
        android:text="@string/text_place" />

    <ToggleButton
        android:id="@+id/tbVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onVibrateClick"
        android:textOff="@string/textOff_tbVibrateOff"
        android:textOn="@string/textOn_tbVibrateOn" />

    <Switch
        android:id="@+id/swWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:switchMinWidth="12sp"
        android:switchPadding="12sp"
        android:text="@string/swWifi"
        android:textOff="@string/textOff_swWifiOff"
        android:textOn="@string/textOn_swWifiOn" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFF"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
